@@ -13,6 +13,12 @@
 	
 }
 
+.firegpg-menu-rease {
+  list-style-image: url("chrome://firegpg/skin/rase.png");
+  
+	
+}
+
 .firegpg-menu-verif {
   list-style-image: url("chrome://firegpg/skin/verif.png");
   
